--- a/style/main.css
+++ b/style/main.css
@@ -18,7 +18,7 @@
 Body{
     background:var(--preta);
     font-family:'Times New Roman', Times, serif;
-    color: write;
+    color: white;
 
 }
 header.container{
@@ -27,9 +27,6 @@ header.container{
     align-items:center;
     justify-content: space-between;
 
-
-
-
 }
 
 /*estiliza o campo logo da página*/
@@ -37,10 +34,20 @@ header.logo{
     color: var(--vermelho);
     font-family: 'Arial Black';
     
-
-
-
 }
 
+ header nav a{
+    text-decoration: none;/*retira o sublinhado*/
+    color: #AAA;
+    margin-right: 10px;
 
+
+ }
+/*destaca as cores dos itens de menu quando 
+o mouse for passado sobre o mesmo*/
+ header nav a:hover{
+    color: #ffff;
+
+ }
+ 
 
