--- a/style/main.css
+++ b/style/main.css
@@ -15,22 +15,25 @@
 }
 
 /*elementos base*/
-Body{
+body{
     background:var(--preta);
     font-family:'Times New Roman', Times, serif;
     color: white;
 
 }
-header.container{
+
+/*hhfhehfreh */
+header .container{
     display: flex;
     flex-direction: row;
-    align-items:center;
+    align-items: center;
     justify-content: space-between;
 
 }
 
 /*estiliza o campo logo da página*/
 header .logo{
+    margin-left: 10px;
     color: var(--vermelho);
     font-family: 'Arial Black';
     
@@ -49,5 +52,15 @@ o mouse for passado sobre o mesmo*/
     color: #ffff;
 
  }
+
+ /*filme principal*/
+    .filme-principal{
+        font-size: 16px;
+        background: linear-gradient(rgba(0, 0, 0, .50),rgba(0, 0, 0, .50)100%), url('/img/imgPlanoFundo.png');
+        height: 400px;
+        background-size: cover;
+
+
+    }
 
 
