--- a/style/main.css
+++ b/style/main.css
@@ -22,7 +22,7 @@ body{
 
 }
 
-/*hhfhehfreh */
+/*Localiza  */
 header .container{
     display: flex;
     flex-direction: row;
@@ -56,7 +56,7 @@ o mouse for passado sobre o mesmo*/
  /*filme principal*/
     .filme-principal{
         font-size: 16px;
-        background: linear-gradient(rgba(0, 0, 0, .50),rgba(0, 0, 0, .50)100%), url('/img/imgPlanoFundo.png');
+        background: linear-gradient(rgba(0, 0, 0, .50),rgba(0, 0, 0, .50)100%), url('/img/oFundo.png');
         height: 400px;
         background-size: cover;
 
