--- a/style/main.css
+++ b/style/main.css
@@ -56,7 +56,7 @@ o mouse for passado sobre o mesmo*/
  /*filme principal*/
     .filme-principal{
         font-size: 16px;
-        background: linear-gradient(rgba(0, 0, 0, .50),rgba(0, 0, 0, .50)100%), url('/img/oFundo.png');
+        background: linear-gradient(rgba(0, 0, 0, .50),rgba(0, 0, 0, .50)100%), url('/img/imgPlanoFundo.png');
         height: 400px;
         background-size: cover;
 
