Configura os botões

--- a/style/main.css
+++ b/style/main.css
@@ -75,6 +75,14 @@ o mouse for passado sobre o mesmo*/
 
         font-size: 30px;
     }
-    
 
+    .botao{
 
+        background-color: rgba(0,0,0,.50);
+        border: none;
+        color: white;
+        padding: 15px 30px;/*distância da margem dos botões*/
+        margin-right: 15px;/*distancia entre os botões*/
+        font-size: 12px;
+    }
+ 
